# present

./: .dir-locals.el  .ghci  .travis.yml  LICENSE  README.md  TODO.org  install-to-global-db.sh  install.sh  lts-6.yaml  lts-7.yaml  present.cabal  present.org  remove-from-global-db.sh  stack.yaml
src/: Main.hs  P.hs  Present.hs  PresentOld.hs
src/Control/Monad/Trans/State/: Strict.hs
src/Data/: ID.hs  Sexp.hs
src/Data/Data/: Exists.hs  Indexed.hs
src/Present/: ByteString.hs  ID.hs  Instances.hs  Sexp.hs  String.hs  TH.hs  Text.hs  Types.hs
src/test/: tests.ghci
test/: Lifts.hs  NormalizeSpec.hs
