name:                present
version:             4.0.1
synopsis:            Make presentations for data types.
description:         Make presentations for data types.
homepage:            https://github.com/chrisdone/present
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2016 Chris Done
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Present
  other-modules:     Control.Monad.Trans.State.Strict
  build-depends:     base >= 4 && <5
                   , template-haskell

test-suite test-solver
    type:                exitcode-stdio-1.0
    main-is:             Main.hs
    ghc-options:         -O2 -Wall
    hs-source-dirs:      src/test
    default-language:    Haskell2010
    build-depends:        base, present
