name:                present
version:             4.1.0
synopsis:            Make presentations for data types.
description:         Make presentations for data types.
homepage:            https://github.com/chrisdone/present
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2016 Chris Done
category:            Development
build-type:          Simple
cabal-version:       >=1.8
extra-source-files: README.md

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Present
  other-modules:     Control.Monad.Trans.State.Strict
  build-depends:     base >= 4 && <5
                   , template-haskell
