name:                present
version:             4.2.0
synopsis:            Make presentations for data types.
description:         Make presentations for data types.
homepage:            https://github.com/chrisdone/present
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2016-2021 Chris Done
category:            Development
build-type:          Simple
cabal-version:       >=1.8
extra-source-files: README.md

library
  hs-source-dirs:    src/
  ghc-options:       -Wall
  exposed-modules:   Present
  build-depends:     base >= 4 && <5
                   , template-haskell
                   , transformers

test-suite present-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test/
  main-is: Main.hs
  other-modules: NormalizeSpec, Lifts
  build-depends: base, hspec, present, template-haskell, th-lift, transformers
